--- a/public/manifest.json
+++ b/public/manifest.json
@@ -57,5 +57,6 @@
   "lang": "en-GB",
   "name": "Pronto Software - Coding Challenge",
   "short_name": "Pronto Software",
+  "start_url": "https://pronto-software-coding-challenge-aw.netlify.app/",
   "description": "Pronto Software - Coding Challenge || Anushka Wijegoonawardana"
 }
